--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
     <html lang="pt-br">
         <head>
-            <title> HTML </title>
+            <title> Dryz </title>
                 <meta charset="utf-8">
                 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
                     <link rel="stylesheet" href="arquivos/css/style.css" />
