--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                                                   <i> Vibe </i>
                                                           </div>
                                                           
-                                                             <div style="margin: 10px;"><span> versão atualizada </span></div>
+                                                             <div style="margin: 10px;"><span> versão sendo atualizada... </span></div>
                                              </main>
             
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
